# mnemosyne

./: .gitignore  CHANGELOG.md  DEVOPS_PLAN_MNEMOSyne_v2.md  MASTERPLAN.md  PAPER_DRAFT.md  README.md  UPDATING.md  __init__.py  mnemosyne_codebase_surface.json  plugin.yaml  pyproject.toml  requirements-benchmark.txt  run_beam_all_scales.sh  run_hybrid_all_scales.sh  setup.py
.planning/: 1-ENTITY-SKETCHING-PLAN.md  1-ENTITY-SKETCHING-SPEC.md  2-STRUCTURED-EXTRACT-PLAN.md  2-STRUCTURED-EXTRACT-SPEC.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
docs/: README.md  api-reference.md  architecture.md  audit-workflow.md  beam-benchmark.md  benchmark-results-analysis.md  benchmarking.md  changelog.md  configuration.md  getting-started.md  hermes-integration.md  llm-installation-guide.md
hermes_memory_provider/: README.md  __init__.py  cli.py  plugin.yaml
hermes_plugin/: __init__.py  plugin.yaml  tools.py
mnemosyne/: __init__.py  cli.py  mcp_server.py  mcp_tools.py
results/: beam_e2e_results.json  beam_e2e_summary.json  vectordb_comparison.json
scripts/: backfill_temporal_triples.py  heal_quality.py  migrate_triplestore_split.py  mnemosyne-stats.py
skills/: mnemosyne-memory-override.md
tests/: benchmark_beam_comprehensive.py  benchmark_beam_scale.py  benchmark_beam_sota.py  benchmark_vs_vectordbs.py  conftest.py  test_annotations.py  test_beam.py  test_beam_db_path_string_coercion.py  test_beam_e4_remember_batch_veracity.py  test_beam_e5_polyphonic_recall.py  test_beam_e6_auto_migrate.py  test_benchmark_preflight.py  test_c13_memory_context_single_injection.py  test_c13b_extraction_diagnostics.py  test_c4_recall_diagnostics.py  test_cli_errors.py  test_cli_operation_failures.py  test_cli_usage_errors.py  test_consolidate_fact_concurrency.py  test_consolidate_fact_id_collision.py  test_consolidate_fact_sibling_races.py  test_degrade_vector.py  test_e1_benchmark_adapter_additive.py  test_e3a3_cross_tier_dedup.py  test_e5a_vector_voice_dense_rewire.py  test_e6a_followup_gaps.py  test_entities.py  test_entity_integration.py  test_extract_parity.py  test_extraction.py  test_extraction_integration.py  test_gap_e_g_analysis.py  test_hermes_memory_provider.py  (+15 more)
(+44 files in other folders)
